<resources>
    <string name="app_name">Rick And Morty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_details">%1$s, %2$s</string>
    <string name="characters">Characters</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_credentials_to_access_your_account">Enter credentials to access your account</string>
    <string name="google">Google</string>
    <string name="or">OR</string>
    <string name="forget_password">Forget Password?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection and try again</string>
    <string name="confirm">Confirm</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign-up</string>
    <string name="user_not_found">User Not found</string>
    <string name="user_disabled">User Disabled</string>
    <string name="user_token_expired">User token expired</string>
    <string name="invalid_user_token">Invalid user token</string>
    <string name="incorrect_password">Incorrect password. Please double-check your password and try again.</string>
    <string name="something_went_wrong_auth">An unexpected authentication error occurred. Please try again later or contact support.</string>
    <string name="no_lists_yet">No lists yet</string>
    <string name="email_is_not_registered">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="forget_password_header">Forget Password</string>
    <string name="reset_email_sent">Reset Email Sent</string>
    <string name="retrieve_access_to_your_account_enter_your_credentials_to_reset_your_password_and_unlock_personalized_experiences">Retrieve access to your account. Enter your credentials to reset your password and unlock personalized experiences.</string>
    <string name="an_email_has_been_sent_to_you_for_password_reset_please_check_your_inbox">If registered, you\'ll receive a password reset email. Check your inbox for instructions.</string>
    <string name="save">Save</string>
    <string name="new_task">New task</string>
    <string name="invalid_password_length">Password must be at least 6 characters long.</string>
    <string name="password_mismatch">Passwords do not match. Please make sure they are identical.</string>
    <string name="facebook">Facebook</string>
    <string name="account_already_registered">An account with this email address already exists. Please sign in or use a different email address.</string>
    <string name="create_your_account_now_to_unlock_personalized_experiences_set_up_your_credentials_and_join_a_world_of_possibilities">Create your account now.</string>
    <string name="email_address_is_required_please_enter_a_valid_email">Email address is required. Please enter a valid email.</string>
    <string name="invalid_email_address_please_enter_a_valid_email">Invalid email address. Please enter a valid email.</string>
    <string name="filter">Filter</string>
    <string name="status">Status</string>
    <string name="dead">Dead</string>
    <string name="alive">Alive</string>
    <string name="unknown">Unknown</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="genderless">Genderless</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="reset_all">Reset All</string>
    <string name="locations">Locations</string>
    <string name="logout">Logout</string>
    <string name="sign_out">Sign out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="do_you_have_account_sign_in">Do you have account? Sign In</string>
    <string name="title_login">Authentication Module</string>
</resources>